--- a/src/scss/utility/_mixins.scss
+++ b/src/scss/utility/_mixins.scss
@@ -29,7 +29,7 @@
 @mixin mq($size, $type: min, $property: width) {
 
 	@if map_has_key($breakpoints, $size) {
-		$size: map_get($breakpoints, $size);
+		$size: map_get($breakpoints, $size) + if($em-media-queries, 0em, 0px);
 	}
 
 	@if $type == max {
